fix: Button focus is hidden behind other buttons in group

--- a/packages/studiocms_ui/src/components/Group/group.css
+++ b/packages/studiocms_ui/src/components/Group/group.css
@@ -20,3 +20,7 @@
 	border-top-left-radius: 0;
 	border-bottom-left-radius: 0;
 }
+
+.sui-group .sui-button:focus-visible {
+	z-index: 2;
+}
